<resources>
    <string name="app_name">Mensageiro</string>
    <!-- MainActivity -->
    <string name="login_text">Começe cadastrando seu usuário</string>
    <string name="login_btn">Começar</string>

    <!-- CadastroActivity -->
    <string name="titulo_cadastro">Insira as informações para cadastro do seu usuário</string>
    <string name="nome_usuario_cadastro">Nome de usuário</string>
    <string name="nome_pejorativo">Não use nomes pejorativos</string>
    <string name="helper_cadastro_nome">Esse é o nome que será visivel a outros usuários</string>
    <string name="email_cadastro">Telefone</string>
    <string name="helper_telefone_usuario">Deve ser um número de telefone real para envio de mensagens</string>
    <string name="confirmar_btn">Confirmar</string>

    <!-- PopupNomeInvalido -->
    <string name="nome_invalido_cadastro">Esse nome não será permitido</string>

    <string name="pesquisar_btn">Pesquisar</string>
    <string name="contatos_titulo">Contatos</string>
    <string name="adicionar_novo_contato">Adicionar\ncontato</string>

    <!-- ConfiguracoesActivity -->
    <string name="conf_notificacoes">Notificações</string>
    <string name="conf_privacidades">Privacidade</string>
    <string name="titulo_configuracoes">Configurações de uso</string>
    <string name="nao_exibir_status">Não exibir status de conexão aos contatos</string>
    <string name="exigir_login_autenticado">Ao iniciar o aplicativo, sempre será exigido a senha do aparelho</string>
    <string name="emitir_notificacoes_ao_receber_mensagens">Emitir uma notificação ao receber uma mensagem</string>
    <string name="nao_confirmar_leitura_mensagem">Não confirma ao contato que te enviou uma mensagem, que você a leu</string>
    <string name="nao_exibir_status_conexao">Não exibe seu status atual aos contatos</string>

    <!-- ContatoCard -->
    <string name="clique_segure_opcoes">Clique e segure para mais opções</string>

    <!-- Conexao contato -->
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="ocupado">Ocupado</string>

    <!-- Status -->
    <string name="status_padrao">Estou utilizando o mensageiro</string>

    <!-- dialog_cadastro_concluido -->
    <string name="cadastro_concluido_sucesso">Cadastro realizado com sucesso!</string>
    <string name="continuar">Continuar</string>
</resources>