<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".activities.CadastroActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sora_bold"
        android:text="@string/titulo_cadastro"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/sora_semibold"
        android:text="@string/nome_usuario_cadastro"
        android:textColor="@color/verde_primario_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeWidth="2dp"
        app:circularflow_defaultRadius="10dp"
        app:helperText="@string/helper_cadastro_nome"
        app:helperTextEnabled="false"
        app:helperTextTextColor="@color/cinza_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:placeholderText="@string/nome_pejorativo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/sora" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/sora_semibold"
        android:text="@string/email_cadastro"
        android:textColor="@color/verde_primario_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textInputNome"
        app:layout_constraintTop_toBottomOf="@+id/textInputNome" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeWidth="2dp"
        app:helperText="@string/helper_telefone_usuario"
        app:helperTextTextColor="@color/cinza_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputNome"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:placeholderText="(  )">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTelefoneCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnConfirmarCadastro"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:drawableEnd="@drawable/ic_like_white_32dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/sora_bold"
        android:text="@string/confirmar_btn"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>